syntax = "proto3";

package timemachine;

message Empty{

}

message ID {
    uint64 timestamp = 1;
    uint64 unique = 2;
}

message Data{
    ID id = 1;
    bytes data = 2;
}

message SaveRequest {
    string folder = 1;
    bool useWAL = 2;
    bytes data = 3;
}

message GetRequest{
    uint64 timestamp = 1;
    uint64 unique = 2;
    string folder = 3;
}

message RangeRequest{
    uint64 from = 1;
    uint64 till = 2;
    string folder = 3;
    bool reverse = 4;
    uint64 maxMessages = 5;
    uint64 maxBytes = 6;
}

service Timemachine {
    rpc Save(SaveRequest) returns (ID) {}
    rpc Get(GetRequest) returns (Data) {}
    rpc GetRange(RangeRequest) returns (stream Data) {}
}



